# jets

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: release.yml
examples/: full.rs
src/: lib.rs
src/app/: cli.rs  config.rs  dat.proto  dns.rs  mod.rs  proxy.rs  router.rs  sniff.rs  utils.rs
src/common/: log.rs  mod.rs
src/proxy/: blackhole.rs  dns.rs  freedom.rs  http.rs  mod.rs  net_manager.rs  shadowsocks.rs  trojan.rs
src/proxy/http/: http_client.rs  http_service.rs  http_stream.rs  mod.rs  utils.rs
src/proxy/socks/: mod.rs  socks4.rs  socks5.rs
src/proxy/tun/: fake_tun.rs  mod.rs  tcp.rs  udp.rs  virt_device.rs
src/proxy/vless/: addons.proto  mod.rs  stream.rs  xtls.rs
src/transport/: mod.rs  raw.rs  tcp.rs  tls.rs  ws.rs
