[package]
name = "jets"
version = "0.3.1"
edition = "2021"
description = "A Rust rule-based tunnel"
homepage = "https://github.com/zhangsan946/jets"
repository = "https://github.com/zhangsan946/jets"
documentation = "https://docs.rs/jets"
authors = ["San Zhang <sanzhang@mail.com>"]
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.80"

exclude = ["src/bin/**", "examples/**", ".github/**"]

[features]
default = ["inbound-http", "outbound-trojan"]

inbound-http = ["pin-project", "tokio-rustls"]
outbound-trojan = ["hex", "sha2"]

[dependencies]
actix-rt = "2.10"
actix-server = "2.5"
actix-service = "2.0"
async-trait = "0.1"
blake3 = "1.8.1"
bytes = "1"
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11"
futures = "0.3"
hyper = { version = "1", features = ["full"] }
http-body-util  = "0.1"
hickory-resolver = "0.25"
hyper-util = { version = "0.1", features = ["full"] }
log = "0.4"
lru_time_cache = { version = "0.11" }
once_cell = "1.20"
prost = "0.13.4"
rand = "0.9.0"
regex = "1.11.1"
rustls = "0.23.26"
#rustls-native-certs = "0.8"
rustls-pki-types = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shadowsocks = { version = "1.23.0", features = ["aead-cipher-2022", "security-replay-attack-detect"] }
shadowsocks-crypto = { version = "0.6.0", default-features = false }
tokio = { version = "1", features = ["net", "io-util", "macros", "sync"] }
trait-variant = "0.1"
uuid = {version = "1.13.1", features = ["v5"]}
webpki-roots = "0.26.8"

# http inbound
pin-project = { version = "1.1", optional = true }
tokio-rustls = { version = "0.26", optional = true, default-features = false }

# trojan outbound
hex = { version = "0.4", optional = true }
sha2 = { version = "0.10", optional = true }

[build-dependencies]
prost-build = "0.13.4"
