[package]
name = "jets"
version = "0.4.2"
edition = "2021"
description = "A Rust rule-based tunnel"
homepage = "https://github.com/zhangsan946/jets"
repository = "https://github.com/zhangsan946/jets"
documentation = "https://docs.rs/jets"
authors = ["San Zhang <sanzhang@mail.com>"]
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.80"

exclude = ["src/bin/**", "examples/**", ".github/**"]

[features]
default = ["inbound-http", "inbound-tun", "outbound-trojan"]

inbound-http = ["pin-project", "tokio-rustls"]
inbound-tun = ["cfg-if", "etherparse", "ipnet", "smoltcp", "spin", "tun"]
outbound-trojan = ["hex", "sha2"]

[dependencies]
async-trait = "0.1"
blake3 = "1.8.1"
bytes = "1"
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
colored = "2"
env_filter = "0.1.3"
futures = "0.3"
hyper = { version = "1", features = ["full"] }
http-body-util  = "0.1"
hickory-resolver = "0.25"
hyper-util = { version = "0.1", features = ["full"] }
log = "0.4"
lru_time_cache = { version = "0.11" }
once_cell = "1.20"
prost = "0.13.4"
rand = "0.9.0"
regex = "1.11.1"
rustls = { version = "0.23.26", features = ["logging", "ring", "std", "tls12"], default-features = false }
#rustls-native-certs = "0.8"
rustls-pki-types = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shadowsocks = { version = "1.23.2", features = ["aead-cipher-2022", "security-replay-attack-detect"] }
shadowsocks-crypto = { version = "0.6.0", default-features = false }
tokio = { version = "1", features = ["net", "io-util", "macros", "rt", "signal", "sync"] }
tokio-tungstenite = "0.27"
trait-variant = "0.1"
tungstenite = { version = "0.27", default-features = false }
uuid = {version = "1.13.1", features = ["v5"]}
webpki-roots = "0.26.8"

# http inbound
pin-project = { version = "1.1", optional = true }
tokio-rustls = { version = "0.26", optional = true, features = ["logging", "ring", "tls12"], default-features = false }

# tun inbound
cfg-if = { version = "1", optional = true }
etherparse = { version = "0.18", optional = true }
ipnet = { version = "2.10", optional = true }
smoltcp = { version = "0.12", optional = true, default-features = false, features = [
    "std",
    "log",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv4-fragmentation",
    "proto-ipv6",
    "socket-icmp",
    "socket-udp",
    "socket-tcp",
    "socket-tcp-cubic",
] }
spin = { version = "0.10", optional = true }
[target.'cfg(any(target_os = "ios", target_os = "macos", target_os = "linux", target_os = "android", target_os = "windows", target_os = "freebsd"))'.dependencies]
tun = { version = "0.7", optional = true, features = ["async"] }

# trojan outbound
hex = { version = "0.4", optional = true }
sha2 = { version = "0.10", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "^0.60", features = ["Win32_System_Console", "Win32_Foundation"] }

[build-dependencies]
prost-build = "0.13.4"
